# inboxops

./: README.md  app.py  claude.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: space_app.py
data/: calendars.json  calendars_impossible.json  customers.json  emails.json  policies.json  tickets.json
env/: __init__.py  environment.py  graders.py  rewards.py
env/tasks/: __init__.py  email_easy.py  scheduling_medium.py  support_hard.py
scripts/: run_baseline.py  run_llm_agent.py
server/: app.py
