[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "inboxops"
version = "1.0.0"
description = "A deterministic workplace agent benchmark for evaluating AI agents on office inbox tasks"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
demo = ["gradio==5.25.0", "requests", "uvicorn"]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*"]
