[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inboxops"
version = "1.0.0"
description = "A deterministic workplace agent benchmark for evaluating AI agents on office inbox tasks"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "gradio==5.25.0",
    "requests",
    "uvicorn",
    "fastapi",
]

[project.scripts]
server = "server.app:main"
inboxops-server = "server.app:main"
serve = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]
